--- a/HROS-UI/public/index.html
+++ b/HROS-UI/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vuehr</title>
+    <link rel="icon" type="image/png" href="<%= BASE_URL %>logo.png">
+    <title>智管人事系统</title>
   </head>
   <body style="margin: 0px; padding: 0px">
     <noscript>
-      <strong>We're sorry but vuehr doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>很抱歉，智管人事系统需要启用 JavaScript 才能正常运行。请启用 JavaScript 后继续。</strong>
     </noscript>
     <div id="app">
 
